force-app/main/default/objects/New_Email_Event__e/New_Email_Event__e.object-meta.xml
<CustomObject>
    <label>New Email Event</label>
    <pluralLabel>New Email Events</pluralLabel>
</CustomObject>