force-app/main/default/objects/New_Email_Event__e/fields/Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Id__c</fullName>
    <label>Email Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>