force-app/main/default/objects/New_Email_Event__e/fields/From_Address__c.field-meta.xml
<CustomField>
    <fullName>From_Address__c</fullName>
    <label>From Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>